# desafio-dio-workout

./: Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 5d0cfaad960f_init_db.py
workoutapi/: main.py  routers.py
workoutapi/atleta/: controller.py  models.py  schemas.py
workoutapi/categorias/: controller.py  models.py  schemas.py
workoutapi/centro_treinamento/: controller.py  models.py  schemas.py
workoutapi/configs/: database.py
workoutapi/contrib/: schemas.py
